# Site4Drug_Demo

./: .gitignore  README.md  pyproject.toml
Appendix: BoltzGen/code/: README.txt  boltzgen_fasta_epitope_demo.ipynb  environment.yml  run_boltzgen_from_fasta_epitope.py
Appendix: DrugCLIP/code/: drugclip_af3_wrapper.py  drugclip_env.yml  main.ipynb
Appendix: DrugCLIP/results/: idx002.seq1_KRAS_6OIM_ranked_compounds.txt  idx007.seq0_BTK_5P9L_ranked_compounds.txt  idx008.seq0_KIF11_(Eg5)_4A5Y_ranked_compounds.txt  idx009.seq1_CHEK1_2YM8_ranked_compounds.txt  idx017.seq0_IDH2_(mIDH)_5I96_ranked_compounds.txt  idx018.seq0_GPX4_7U4N_ranked_compounds.txt  idx019.seq0_Akt2_3D0E_ranked_compounds.txt  idx023.seq0_BRD4_3MXF_ranked_compounds.txt  idx029.seq0_PARP1_7AAD_ranked_compounds.txt  idx031.seq0_CDK6_5L2I_ranked_compounds.txt  idx033.seq3_MEK1_3E8N_ranked_compounds.txt  idx035.seq0_CK2_3NGA_ranked_compounds.txt  idx042.seq1_BCL2_4LVT_ranked_compounds.txt  idx048.seq2_BRAF_3C4C_ranked_compounds.txt  idx049.seq0_ERK1_4QTB_ranked_compounds.txt  idx050.seq0_ERK2_6DCG_ranked_compounds.txt  idx050.seq1_ERK2_4QTA_ranked_compounds.txt  (+3 more)
data/: Site4Drug_GroundTruth.json  Site4Drug_GroundTruth_newest_0324.json  TCellEpitope_GroundTruth_random100_seed42.json  TCellEpitope_GroundTruth_random100_seed42_audit.csv
results/: DrugCLIP_1XKK.xlsx  Site4Drug_antibody.xlsx  Site4Drug_pocket.xlsx
scripts/: run_gradio_demo.sh  setup_openrouter_key.sh  setup_tinker_key.sh
tests/: test_cli_entrypoint.py  test_openrouter_client.py  test_schema_and_reports.py  test_self_consistency_and_fill.py
(+111 files in other folders)
